--- a/src/templates/access.html
+++ b/src/templates/access.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Template HTML</title>
+    <title>Access HTML</title>
   </head>
   <body>
-    <h1>Hello World****</h1>
-    <!-- pugはまたの機会に -->
+    <h1>This is a Access Page</h1>
     <div>
       <a href="/index.html">index.html</a>
       <a href="/access.html">access.html</a>
     </div>
-    <img src="<%= require('../images/icon.png') %>" />
-    <img src="<%= require('../images/thumbnail.jpeg') %>" />
   </body>
 </html>
